# zip-sec-project

./: Cargo.toml  README.md
src/: main.rs
src/jamf/: client.rs  mod.rs  models.rs  provider.rs
src/jampf/: client.rs  models.rs  provider.rs
src/routes/: computers.rs  credentials.rs  devices.rs  hello.rs  mod.rs
