[package]
name = "backend-takehome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web framework and dependency
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }

# web client
reqwest = { version = "0.11", features = ["json"] }

# (de)serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# misc (middleware, time, etc. -- other things you might need)
chrono = "0.4"
version-compare = "0.1.1"
tower-http = { version = "0.4", features = ["cors", "trace"] }
http = "0.2"
enum_dispatch = "0.3.13"
mockall = "0.13.1"
thiserror = "2.0.11"
dotenv = "0.15.0"
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
